--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 #logging.level.org.springframework=TRACE
 company.name = DUCAT India!!!...
+server.port=9090
+spring.h2.console.enabled=true
+spring.datasource.name=STUDB
+spring.datasource.generate-unique-name=false
