--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port=9090
 spring.h2.console.enabled=true
 spring.datasource.name=STUDB
 spring.datasource.generate-unique-name=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
