--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		</dependency>
 
 
 	</dependencies>
