--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.name=STUDB
 spring.datasource.generate-unique-name=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:49153/STUDB
+spring.datasource.username=root
+spring.datasource.password=root
