--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ server.port=9090
 spring.h2.console.enabled=true
 spring.datasource.name=STUDB
 spring.datasource.generate-unique-name=false
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:49153/STUDB
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.defer-datasource-initialization: true
+#spring.datasource.url=jdbc:mysql://localhost:49153/STUDB
+#spring.datasource.username=root
+#spring.datasource.password=root
