--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #logging.level.org.springframework=TRACE
+logging.level.org.springframework=DEBUG
 company.name = DUCAT India!!!...
 server.port=9090
 spring.h2.console.enabled=true
@@ -10,3 +11,11 @@ spring.jpa.defer-datasource-initialization: true
 #spring.datasource.url=jdbc:mysql://localhost:49153/STUDB
 #spring.datasource.username=root
 #spring.datasource.password=root
+#management.endpoints.web.exposure.include=*
+DatabaseTesting=true
+DatabaseTesting.name = databaseTesting
+DatabaseTesting.password = databaseTestingPassword
+
+#DatabaseProd=true
+DatabaseProd.name = databaseProd
+DatabaseProd.password = databaseProdPassword
