spring web filters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ DatabaseTesting.password = databaseTestingPassword
 #DatabaseProd=true
 DatabaseProd.name = databaseProd
 DatabaseProd.password = databaseProdPassword
+
+spring.jackson.default-property-inclusion=non_null
